@@ -14,6 +14,9 @@ WHAT IS NEW?
     
     * plotscripting command to find out the currently playing song.
       [Mike Caron]
+
+    * plotscripting command run script by ID which does just that 
+      [Ralph Versteegen]
       
     * Strings! Specifically:
     
